webadmin: Fix extra scrollbar in FF
- Fixed issue where in FF when there is 1 row there would
  be an extra scrollbar in the grid that shouldn't be there.

Bug-Url: https://bugzilla.redhat.com/1491567

--- a/frontend/brands/ovirt-brand/src/main/sass/_ovirt.scss
+++ b/frontend/brands/ovirt-brand/src/main/sass/_ovirt.scss
@@ -1429,3 +1429,8 @@ td.datePickerYear {
 .icon-status-panel-container {
     padding-left: 5px;
 }
+
+/* GWT-TODO: verify this selector still works for DataGrids when upgrading GWT */
+.hide-one-row-scroll > div:nth-child(3) > div > div:nth-child(2) > div {
+    position: relative !important;
+}
