--- a/frontend/webadmin/modules/gwt-common/src/main/resources/org/ovirt/engine/ui/common/css/TabCellTable.css
+++ b/frontend/webadmin/modules/gwt-common/src/main/resources/org/ovirt/engine/ui/common/css/TabCellTable.css
@@ -73,8 +73,13 @@
 }
 
 .cellTableFirstColumnHeader {
+    text-align: left;
+    height: 27px;
+    line-height: 28px;
+    white-space: nowrap;
+    position: relative;
+    border: 0;
     padding-left: 4px;
-    border-left: 0;
 }
 
 .cellTableLastColumnHeader {
