--- a/frontend/webadmin/modules/gwt-common/src/main/resources/org/ovirt/engine/ui/common/css/TabDataGrid.css
+++ b/frontend/webadmin/modules/gwt-common/src/main/resources/org/ovirt/engine/ui/common/css/TabDataGrid.css
@@ -5,26 +5,26 @@
 }
 
 .dataGridHeader {
-    padding: 0px 0px 0px 4px;
+    padding: 0 0 0 4px;
     text-align: left;
     background-image: linear-gradient(to bottom, #fafafa 0, #ededed 100%);
     height: 27px;
     line-height: 28px;
     white-space: nowrap;
     position: relative;
-    border-top: 0 solid #d1d1d1;
-    border-bottom: 0 solid #d1d1d1;
+    border-top: 0;
+    border-bottom: 0;
     border-left: 1px solid #d1d1d1;
-    border-right: 0 solid #d1d1d1;
+    border-right: 0;
 }
 
 .dataGridCell {
-    padding: 0px 4px 0px 4px;
-    height: 26px !important;
+    padding: 0 4px 0 4px;
+    height: 26px;
     border-top: 1px solid #d1d1d1;
-    border-bottom: 0 solid #d1d1d1;
+    border-bottom: 0;
     border-left: 1px solid #d1d1d1;
-    border-right: 0 solid #d1d1d1;
+    border-right: 0;
     white-space: nowrap;
     cursor: pointer;
 }
